--- a/generic.html
+++ b/generic.html
@@ -53,19 +53,31 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">December 2, 2025</span>
-										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/">When Molecules Light Up: The Measurable Properties of Fluorescence (3/4)<br />
+									<span class="date">January 19, 2026</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-fluorescence-lifetime-and-the-power-of-time-4-4/">When Molecules Light Up: Fluorescence Lifetime and the Power of Time (4/4)<br />
 										</a></h2>
-									<p>Fluorescence is rich with measurable properties that reveal how molecules absorb, transform, and release energy. In this article, we explore the optical signatures that shape every fluorescent signal – from brightness and color to energy shifts, efficiency, and molecular motion. By uncovering these properties, we learn how fluorescence becomes not just light, but a powerful analytical tool in biomedicine and beyond - LaserBlood.</p>
+									<p>Fluorescence lifetime adds a powerful temporal dimension to optical imaging, revealing how long molecules remain excited before emitting light. Unlike brightness or color, lifetime is largely independent of concentration and excitation intensity, making it a robust and sensitive probe of molecular interactions and local environments. By separating signals in time rather than wavelength, fluorescence lifetime uncovers information that remains hidden to conventional spectral methods. This time-resolved contrast transforms fluorescence into a functional biomarker with growing impact in biological and clinical applications - LaserBlood.</p>
 								</header>
-								<a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/" class="image main"><img src="images/Properties.png" alt="" /></a>
+								<a href="https://www.laserblood.eu/when-molecules-light-up-fluorescence-lifetime-and-the-power-of-time-4-4/" class="image main"><img src="images/Properties.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/" class="button large">Full Story</a></li>
+									<li><a href="https://www.laserblood.eu/when-molecules-light-up-fluorescence-lifetime-and-the-power-of-time-4-4/" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">December 2, 2025</span>
+										<h2><a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/">When Molecules Light Up: The Measurable Properties of Fluorescence (3/4)<br />
+										</a></h2>
+									</header>
+									<a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/" class="image fit"><img src="images/Properties.png" alt="" /></a>
+									<p>Fluorescence is rich with measurable properties that reveal how molecules absorb, transform, and release energy. In this article, we explore the optical signatures that shape every fluorescent signal – from brightness and color to energy shifts, efficiency, and molecular motion. By uncovering these properties, we learn how fluorescence becomes not just light, but a powerful analytical tool in biomedicine and beyond - LaserBlood.</p>
+									<ul class="actions special">
+										<li><a href="https://www.laserblood.eu/when-molecules-light-up-the-measurable-properties-of-fluorescence-3-4/" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">October 24, 2025</span>
@@ -233,6 +245,7 @@
 
 	</body>
 </html>
+
 
 
 
