--- a/generic.html
+++ b/generic.html
@@ -58,7 +58,7 @@
 										</a></h2>
 									<p>Fluorescence lifetime adds a powerful temporal dimension to optical imaging, revealing how long molecules remain excited before emitting light. Unlike brightness or color, lifetime is largely independent of concentration and excitation intensity, making it a robust and sensitive probe of molecular interactions and local environments. By separating signals in time rather than wavelength, fluorescence lifetime uncovers information that remains hidden to conventional spectral methods. This time-resolved contrast transforms fluorescence into a functional biomarker with growing impact in biological and clinical applications - LaserBlood.</p>
 								</header>
-								<a href="https://www.laserblood.eu/when-molecules-light-up-fluorescence-lifetime-and-the-power-of-time-4-4/" class="image main"><img src="images/Properties.png" alt="" /></a>
+								<a href="https://www.laserblood.eu/when-molecules-light-up-fluorescence-lifetime-and-the-power-of-time-4-4/" class="image main"><img src="images/Lifetime Cover.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://www.laserblood.eu/when-molecules-light-up-fluorescence-lifetime-and-the-power-of-time-4-4/" class="button large">Full Story</a></li>
 								</ul>
@@ -245,6 +245,7 @@
 
 	</body>
 </html>
+
 
 
 
