--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
 								<article>
 									<header>
 										<span class="date">February 11, 2026</span>
-										<h2><a href="https://www.youtube.com/watch?v=FkmIzwqfUDw">VG21 - CAMBIAMENTO CLIMATICO, IL CNR IN ANTARTIDE <br />
+										<h2><a href="https://www.youtube.com/watch?v=FkmIzwqfUDw">VG21 - CLIMA, IL CNR IN ANTARTIDE <br />
 										</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=FkmIzwqfUDw" class="image fit"><img src="images/CNR in Antartide.png" alt="" /></a>
